--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,63 @@
 h1{
-  background-color: blueviolet;
   padding: 1rem;
   text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  width: 100%;
+}
+.centralizar{
+	text-align: center;
 }
 
 #divBtn{
   text-align: center;
+}
+.logo{
+    width: 100px;
+    border-radius: 10px;
+    padding: 5px;
+    background-color: white;
+}
+.logo2{
+    border-radius: 10px;
+    padding: 5px;
+    background-color: white;
+}
+#home {
+	color: white;
+}
+footer {
+	padding: 50px 0px 20px 0px;
+	position: relative;
+}
+
+footer h4 {
+	color: #919496;
+	font-size: 0.8em;
+	text-transform: uppercase;
+}
+
+footer .navbar-nav a {
+	color: white;
+	font-size: 0.8em;
+}
+
+footer .navbar-nav a:hover {
+	color: #9bf0e1;
+	text-decoration: none;
+}
+
+footer ul {
+	list-style: none;
+}
+
+footer ul li {
+	float: right;
+	margin: 0 5px;
+}
+.albuns {
+	padding: 10px 0;
+}
+.caixa {
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
