--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,10 @@ h1{
   width: 100%;
 }
 .centralizar{
-	text-align: center;
+	padding: 3;
+  	text-align: center;
+ 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  	width: 100%;
 }
 
 #divBtn{
